Making iacomponents/package.json the main file for dependencies
Removed nested jwplayer-comp package.json, and moved dependencies up to main directory's package.json

--- a/packages/iacomponents/package.json
+++ b/packages/iacomponents/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "prop-types": "^15.6.2",
-        "react": "^16.6.0"
+        "react": "^16.6.0",
+        "react-jw-player": "^1.18.1"
     }
 }
