Adding StorybookJS - inside of `ia-components` directory - helps during UI development, with hot reloading - allows us to visually record our components - a11y element support - usage examples on how to use storybook & add-ons - extend documentation to include usage help - story files live with their respective component

--- a/packages/ia-prototype-apps/package.json
+++ b/packages/ia-prototype-apps/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "prototypes",
+  "name": "ia-prototype-apps",
+  "version": "0.0.0",
+  "license": "AGPL-3",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
     "ia-components": "^0.0.0",
