--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -2,19 +2,33 @@
     "name": "ia-components",
     "version": "0.0.0",
     "source": true,
+    "license": "AGPL-3",
+    "scripts": {
+        "storybook": "start-storybook -p 9001 -c .storybook"
+    },
     "devDependencies": {
+        "@babel/core": "^7.2.2",
+        "@storybook/addon-a11y": "4.2.0-alpha.10",
+        "@storybook/addon-knobs": "^4.1.4",
+        "@storybook/react": "^4.1.4",
         "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.4",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
-        "less": "^3.8.1"
+        "css-loader": "^2.1.0",
+        "less": "^3.8.1",
+        "less-loader": "^4.1.0",
+        "storybook-addon-jsx": "^6.0.0",
+        "style-loader": "^0.23.1"
     },
     "dependencies": {
         "ia-js-client": "^0.0.0",
         "prop-types": "^15.6.2",
         "react": "^16.6.0",
+        "react-dom": "^16.4.2",
         "react-jw-player": "^1.18.1"
     }
 }
