--- a/packages/ia-js-client/package.json
+++ b/packages/ia-js-client/package.json
@@ -2,6 +2,7 @@
   "name": "ia-js-client",
   "version": "0.0.0",
   "main": "build/index.js",
+  "license": "AGPL-3",
   "devDependencies": {
     "@types/node": "^10.7.1",
     "babel-core": "^6.26.3",
