--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
     "lerna": "^3.4.3"
   },
   "name": "iaux",
-  "license": "AGPL-3"
+  "license": "AGPL-3",
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3"
+  }
 }
