Adding JestJS for Unit Testing Jest is flexible enough to test not only our React components, but our JavaScript & Typescript.
The following has been added:
- JestJs in `ia-components` repo
  - main config file: jest.config.js
  - example test: example.test.js
    - Mimicked Petabox Jest usage by adding  both `assert` library. The example test uses `assert` & Jest native `expect` for discussion on what we should use moving forward
  - cli commands inside of package.json
  - StorybookJs integration
  - Update ReadME with usage instructions
- Top-level updates:
  - extend ESLint plugin
  - extend .gitignore with `jest-test-utils` - in-repo directory of jest related files not necessary to commit
  - Update ReadME

JestJS Snapshots
a `__snapshots__` folder gets created at the same directory level as the test file. This __must be committed__.  This snapshot is 'proof' of when the component has passed its unit test.  This is how Jest tests React components.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "plugins": [
         "babel",
         "eslint-plugin-import",
-        "eslint-plugin-react"
+        "eslint-plugin-react",
+        "jest"
     ],
     "rules": {
         "babel/semi": 0,
