--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -4,13 +4,19 @@
     "source": true,
     "license": "AGPL-3",
     "scripts": {
-        "storybook": "start-storybook -p 9001 -c .storybook"
+        "storybook": "yarn run test:generate-output && yarn run storybook:start",
+        "storybook:start": "start-storybook -p 9001 -c .storybook",
+        "test:generate-output": "jest --json --outputFile=jest-test-utils/jest-test-results.json || true",
+        "test:update-snapshots": "jest --updateSnapshot",
+        "test": "jest --watch --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
         "@storybook/addon-a11y": "4.2.0-alpha.10",
+        "@storybook/addon-jest": "^4.1.6",
         "@storybook/addon-knobs": "^4.1.4",
         "@storybook/react": "^4.1.4",
+        "assert": "^1.4.1",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-class-properties": "^6.24.1",
@@ -19,8 +25,11 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^2.1.0",
+        "fsevents": "^1.2.4",
+        "jest": "^23.6.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
+        "react-test-renderer": "^16.7.0",
         "storybook-addon-jsx": "^6.0.0",
         "style-loader": "^0.23.1"
     },
