Update ESLINT to add jest globals, a11y checks around `htmlFor` property of a label

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
     "env": {
-        "browser": true
+        "browser": true,
+        "jest/globals": true
     },
     "extends": "airbnb",
     "plugins": [
         "babel",
         "eslint-plugin-import",
         "eslint-plugin-react",
-        "jest"
+        "jest",
+        "jsx-a11y"
     ],
     "rules": {
         "babel/semi": 2,
@@ -19,6 +21,8 @@
                 "peerDependencies": false
             }
         ],
+        "jsx-a11y/label-has-for": 0,
+        "jsx-a11y/label-has-associated-control": 2,
         "react/jsx-filename-extension": [
             1, {
                 "extensions": [".js", ".jsx"]
