--- a/packages/ia-js-client/package.json
+++ b/packages/ia-js-client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ia-js-client",
+  "name": "@internetarchive/ia-js-client",
   "version": "0.0.0",
   "main": "build/index.js",
-  "license": "AGPL-3",
+  "license": "AGPL-3.0-only",
   "devDependencies": {
     "@types/node": "^10.7.1",
     "babel-core": "^6.26.3",
