--- a/packages/ia-design-system/package.json
+++ b/packages/ia-design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-design-system",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.20+5039f8d",
   "license": "AGPL-3.0-only",
   "main": "public/scripts/index.js",
   "scripts": {
@@ -22,5 +22,8 @@
     "less-loader": "^4.1.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
