--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "lerna": "^3.4.3"
   },
   "name": "iaux",
-  "license": "AGPL-3",
+  "license": "AGPL-3.0-only",
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
