Updated dependencies for ia packages to include path and version. Also updated lerna version.

--- a/packages/ia-prototype-apps/package.json
+++ b/packages/ia-prototype-apps/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "dependencies": {
     "babel-preset-react": "^6.24.1",
-    "ia-components": "^0.0.0",
-    "ia-js-client": "^0.0.0",
+    "@internetarchive/ia-components": "^0.0.0-alpha.20+5039f8d",
+    "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1"
