--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -35,6 +35,7 @@
         "style-loader": "^0.23.1"
     },
     "dependencies": {
+        "lodash": "^4.17.11",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
