--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -12,21 +12,18 @@
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.3.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+        "@babel/plugin-transform-runtime": "^7.3.4",
+        "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
         "@storybook/addon-a11y": "4.2.0-alpha.10",
         "@storybook/addon-jest": "^4.1.6",
         "@storybook/addon-knobs": "^4.1.4",
         "@storybook/react": "^4.1.4",
         "assert": "^1.4.1",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.4",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
+        "babel-loader": "^8.0.5",
         "css-loader": "^2.1.0",
         "fsevents": "^1.2.4",
-        "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
         "jest": "^23.6.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
