--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -23,7 +23,6 @@
         "assert": "^1.4.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.0",
-        "fsevents": "^1.2.4",
         "jest": "^23.6.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
@@ -40,6 +39,9 @@
     },
     "peerDependencies": {
         "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d"
+    },
+    "optionalDependencies": {
+        "fsevents": "^1.2.4"
     },
     "publishConfig": {
         "access": "public"
