Update all package.json with updated version of babel

--- a/packages/ia-components/.babelrc
+++ b/packages/ia-components/.babelrc
@@ -1,22 +1,23 @@
 {
-    "presets": [
-        [
-          "@babel/env", {
-            "targets": {
-              "node": "current"
-            }
-          }
-        ],
-        "@babel/preset-react"
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
     ],
-    "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
-        [
-          "@babel/plugin-transform-runtime",
-          {
-            "regenerator": true
-          }
-        ]
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
     ]
+  ]
 }
