--- a/packages/ia-components/sandbox/jwplayer-comp/.babelrc
+++ b/packages/ia-components/sandbox/jwplayer-comp/.babelrc
@@ -1,23 +1,25 @@
 {
-    "presets": [
-        [
-          "env", {
-            "targets": {
-              "node": "current"
-            }
-          }
-        ],
-        "react"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
     ],
-    "plugins": [
-        "transform-class-properties",
-        "transform-object-rest-spread",
-        [
-          "transform-runtime",
-          {
-            "polyfill": false,
-            "regenerator": true
-          }
-        ]
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2,
+        "polyfill": false,
+        "regenerator": true
+      }
     ]
+  ]
 }
