--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -21,6 +21,8 @@
         "@storybook/addon-knobs": "^4.1.4",
         "@storybook/react": "^4.1.4",
         "assert": "^1.4.1",
+        "babel-core": "^7.0.0-bridge.0",
+        "babel-jest": "^23.4.2",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.0",
         "fsevents": "^1.2.4",
