--- a/packages/ia-design-system/package.json
+++ b/packages/ia-design-system/package.json
@@ -11,10 +11,10 @@
     "watch": "webpack --config webpack.config.js --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@frctl/fractal": "^1.1.6",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "next",
