--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -23,13 +23,15 @@
         "assert": "^1.4.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.0",
-        "fsevents": "^1.2.4",
         "jest": "^23.6.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
         "react-test-renderer": "^16.7.0",
         "storybook-addon-jsx": "^6.0.0",
         "style-loader": "^0.23.1"
+    },
+    "optionalDependencies":{
+        "fsevents": "^1.2.4"
     },
     "dependencies": {
         "lodash": "^4.17.11",
