--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -23,6 +23,7 @@
         "assert": "^1.4.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.0",
+        "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
