--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -33,6 +33,7 @@
         "style-loader": "^0.23.1"
     },
     "dependencies": {
+        "debug": "^4.1.1",
         "lodash": "^4.17.11",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
