--- a/packages/ia-prototype-apps/package.json
+++ b/packages/ia-prototype-apps/package.json
@@ -4,7 +4,8 @@
   "license": "AGPL-3.0-only",
   "private": true,
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@internetarchive/ia-components": "^0.0.0-alpha.20+5039f8d",
     "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
     "debug": "^4.1.1",
@@ -13,11 +14,11 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "babelify": "^8.0.0",
     "less": "^3.8.1",
     "parcel-bundler": "^1.9.7"
