--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -12,6 +12,8 @@
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.3.4",
         "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
         "@babel/plugin-transform-runtime": "^7.3.4",
