--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   },
   "name": "iaux",
   "license": "AGPL-3.0-only",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
