--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -33,8 +33,10 @@
         "style-loader": "^0.23.1"
     },
     "dependencies": {
+        "@stratumn/canonicaljson": "^1.0.3",
         "debug": "^4.1.1",
         "lodash": "^4.17.11",
+        "prettier-bytes": "^1.0.4",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0"
