Reorganize and fix tests

--- a/packages/scrubber-bar/package.json
+++ b/packages/scrubber-bar/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "lint:types": "tsc",
     "build": "tsc -p tsconfig.build.json",
+    "watch": "tsc -p tsconfig.build.json --watch",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
     "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
