--- a/packages/scrubber-bar/package.json
+++ b/packages/scrubber-bar/package.json
@@ -8,10 +8,12 @@
   "module": "index.js",
   "scripts": {
     "lint:types": "tsc",
+    "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
-    "watch": "tsc -p tsconfig.build.json --watch",
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "start":
+      "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch\"",
+    "start:compatibility":
+      "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --compatibility all\"",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
     "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
@@ -41,10 +43,13 @@
     "@open-wc/testing-karma": "^3.0.0",
     "@open-wc/testing-karma-bs": "^1.0.0",
     "@storybook/react": "^5.1.11",
+    "concurrently": "^4.1.2",
     "es-dev-server": "^1.5.0",
     "eslint": "^6.1.0",
+    "gulp": "^4.0.2",
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
+    "polymer-cli": "^1.9.11",
     "typescript": "^3.6.2",
     "webpack-merge": "^4.1.5"
   },
