--- a/packages/scrubber-bar/tsconfig.json
+++ b/packages/scrubber-bar/tsconfig.json
@@ -5,10 +5,11 @@
     "experimentalDecorators": true, // needed for using decorators
     "moduleResolution": "node",     // needed to correctly resolve node_modules like `lit-element`
     "sourceMap": true,
-    "allowJs": true
+    "outDir": "./lib",
+    "declaration": true
   },
   "include": [
-    "src/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules/!(@open-wc)",
