--- a/packages/scrubber-bar/tsconfig.json
+++ b/packages/scrubber-bar/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",     // needed to correctly resolve node_modules like `lit-element`
     "sourceMap": true,
     "outDir": "./lib",
-    "declaration": true
+    "declaration": true,
+    "strict": true
   },
   "include": [
     "src/**/*.ts"
