--- a/packages/scrubber-bar/package.json
+++ b/packages/scrubber-bar/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@internetarchive/scrubber-bar",
   "version": "0.0.1",
-  "description": "Webcomponent scrubber-bar following open-wc recommendations",
-  "author": "scrubber-bar",
+  "description": "A Scrubber Bar WebComponent for use in scrubbing through media",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
