--- a/packages/ia-prototype-apps/package.json
+++ b/packages/ia-prototype-apps/package.json
@@ -7,6 +7,7 @@
     "@internetarchive/ia-components": "^0.0.0-alpha.20+5039f8d",
     "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
     "@internetarchive/scrubber-bar": "file:../scrubber-bar",
+    "@internetarchive/waveform-progress": "file:../waveform-progress",
     "babel-preset-react": "^6.24.1",
     "debug": "^4.1.1",
     "react": "^16.7.0",
