--- a/packages/audio-player/package.json
+++ b/packages/audio-player/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@internetarchive/audio-player",
   "version": "0.0.1",
-  "description": "A Scrubber Bar WebComponent for use in scrubbing through media",
+  "description": "An Audio Player LitElement that wraps the HTML audio tag.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
