--- a/packages/audio-element/package.json
+++ b/packages/audio-element/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@internetarchive/audio-player",
+  "name": "@internetarchive/audio-element",
   "version": "0.0.1",
-  "description": "An Audio Player LitElement that wraps the HTML audio tag.",
+  "description": "An Audio Element that wraps the HTML audio tag.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
@@ -41,7 +41,7 @@
     "@storybook/react": "^5.1.11",
     "@types/form-data": "^2.5.0",
     "@types/storybook__react": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.2.0",
     "concurrently": "^4.1.2",
     "es-dev-server": "^1.5.0",
@@ -66,7 +66,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.ts": [
       "eslint --fix",
       "prettier --write",
       "git add"
