--- a/packages/ia-prototype-apps/package.json
+++ b/packages/ia-prototype-apps/package.json
@@ -8,6 +8,7 @@
     "@internetarchive/ia-js-client": "^0.0.0-alpha.20+5039f8d",
     "@internetarchive/scrubber-bar": "^0.0.1",
     "@internetarchive/waveform-progress": "^0.0.1",
+    "@internetarchive/audio-element": "^0.0.1",
     "babel-preset-react": "^6.24.1",
     "debug": "^4.1.1",
     "react": "^16.7.0",
