--- a/packages/ia-js-client/package.json
+++ b/packages/ia-js-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-js-client",
-  "version": "0.0.0-alpha.20+5039f8d",
+  "version": "0.0.1-alpha.0",
   "main": "build/index.js",
   "license": "AGPL-3.0-only",
   "devDependencies": {
