Update some configurations to help with TypeScript support

--- a/packages/waveform-progress/package.json
+++ b/packages/waveform-progress/package.json
@@ -5,6 +5,8 @@
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
+  "types": "index.d.ts",
+  "preserveSymlinks": "true",
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
