--- a/packages/waveform-progress/tsconfig.json
+++ b/packages/waveform-progress/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "outDir": "./lib",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    "preserveSymlinks": true
   },
   "include": [
     "src/**/*.ts"
