--- a/packages/scrubber-bar/package.json
+++ b/packages/scrubber-bar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@internetarchive/scrubber-bar",
-  "version": "0.0.2",
-  "description": "A Scrubber Bar WebComponent for use in scrubbing through media",
+  "version": "0.0.0",
+  "description": "A Scrubber Bar LitElement for use in scrubbing through media",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
