--- a/packages/waveform-progress/package.json
+++ b/packages/waveform-progress/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@internetarchive/waveform-progress",
-  "version": "0.0.2",
-  "description": "A Scrubber Bar WebComponent for use in scrubbing through media",
+  "version": "0.0.0",
+  "description": "A Waveform Progress LitElement for displaying media progress in a waveform",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
