--- a/packages/audio-element/package.json
+++ b/packages/audio-element/package.json
@@ -66,6 +66,9 @@
       "pre-commit": "lint-staged"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "lint-staged": {
     "src/**/*.ts": [
       "eslint --fix",
