--- a/packages/playback-controls/package.json
+++ b/packages/playback-controls/package.json
@@ -66,6 +66,9 @@
       "pre-commit": "lint-staged"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
