--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@internetarchive/radio-player",
-  "version": "0.0.1",
-  "description": "A transcript view that handles closed captioning and search results.",
+  "version": "0.0.0",
+  "description": "A Radio Player LitElement.",
   "license": "AGPL-3.0-only",
   "main": "index.js",
   "module": "index.js",
@@ -71,6 +71,9 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "lint-staged": {
     "*.ts": [
