--- a/packages/playback-controls/package.json
+++ b/packages/playback-controls/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
-    "start": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch\"",
+    "watch": "tsc --watch",
+    "devserver": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "concurrently \"npm run watch\" \"npm run devserver\"",
     "start:compatibility": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --compatibility all\"",
     "lint:eslint": "eslint --ext .ts . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .ts . --fix --ignore-path .gitignore",
