Make `yarn test` only run tests instead of watch
`jest --watch` causes it to prompt you and stops execution of the tests. Now there's a separate `test:watch` script to do the watching.

--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -8,7 +8,8 @@
         "storybook:start": "start-storybook -p 9001 -c .storybook",
         "test:generate-output": "mkdir jest-test-utils && jest --json --outputFile=jest-test-utils/jest-test-results.json || true",
         "test:update-snapshots": "jest --updateSnapshot",
-        "test": "jest --watch --coverage",
+        "test": "jest --coverage",
+        "test:watch": "yarn run test --watch",
         "test:integration": "node_modules/.bin/jest --config integration/jest.config.js"
     },
     "devDependencies": {
