--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -18,14 +18,14 @@
         "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
         "@babel/plugin-transform-runtime": "^7.5.5",
         "@babel/runtime": "^7.5.5",
-        "@internetarchive/ia-js-client": "^0.0.0",
+        "@internetarchive/ia-js-client": "0.0.0-alpha.350",
         "@storybook/addon-a11y": "4.2.0-alpha.10",
         "@storybook/addon-jest": "^4.1.6",
         "@storybook/addon-knobs": "^4.1.4",
         "@storybook/react": "^4.1.4",
         "axios": "^0.19.0",
         "babel-loader": "^8.0.5",
-        "chromedriver": "^76.0.0",
+        "chromedriver": "^78.0.0",
         "css-loader": "^2.1.0",
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
