--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -40,6 +40,7 @@
     "@internetarchive/scrubber-bar": "0.0.1-alpha.445+38342c8",
     "@internetarchive/transcript-view": "0.0.1-alpha.434+88a0e52",
     "@internetarchive/waveform-progress": "0.0.1-alpha.447+9eae4b4",
+    "@internetarchive/expandable-search-bar": "0.0.1-alpha.445+0199172",
     "lit-element": "^2.2.1",
     "lit-html": "^1.0.0"
   },
