--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: node_js
 node_js:
   - node
 
+install:
+  - npm install -g codecov
+
 script:
   - lerna bootstrap
   - lerna run test
-  - bash <(curl -s https://codecov.io/bash) -vcF javascript
+  - codecov
