--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
   - node
 
+install:
+  - npm install -g codecov
+
 script:
   - lerna bootstrap
   - lerna run test
+
+after_success:
+  - codecov
