--- a/packages/ia-models/package.json
+++ b/packages/ia-models/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "lint": "eslint --ext .ts . --ignore-path .gitignore",
     "watch": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.0",
     "typescript": "^3.7.5"
