--- a/packages/ia-models/.eslintrc
+++ b/packages/ia-models/.eslintrc
@@ -2,11 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "extends": ["plugin:@typescript-eslint/recommended", "../../.eslintrc.json"],
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
+  "rules": {
+    "@typescript-eslint/interface-name-prefix": ["off"]
   }
 }
