--- a/packages/ia-models/package.json
+++ b/packages/ia-models/package.json
@@ -1,22 +1,86 @@
 {
-  "name": "ia-models",
+  "name": "@internetarchive/ia-models",
   "version": "0.0.0",
+  "description": "Data Models for the Internet Archive API.",
+  "license": "AGPL-3.0-only",
   "main": "index.js",
-  "license": "MIT",
+  "module": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "lib/**/*",
+    "index.d.ts",
+    "index.js"
+  ],
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
-    "lint": "eslint --ext .ts . --ignore-path .gitignore",
     "watch": "tsc --watch",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "devserver": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "concurrently \"npm run watch\" \"npm run devserver\"",
+    "start:compatibility": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --compatibility all\"",
+    "lint:eslint": "eslint --ext .ts . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .ts . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.ts\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test": "npm run build && karma start --coverage",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:update-snapshots": "karma start --update-snapshots",
+    "test:prune-snapshots": "karma start --prune-snapshots",
+    "test:compatibility": "karma start --compatibility all --coverage",
+    "test:compatibility:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
+    "test:bs": "karma start karma.bs.config.js --compatibility all --coverage",
+    "site:build": "npm run storybook:build",
+    "storybook": "start-storybook -p 9001",
+    "storybook:build": "build-storybook -o _site -s storybook-static"
+  },
+  "dependencies": {
+    "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.2",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "ts-jest": "^25.2.0",
-    "typescript": "^3.7.5"
+    "@open-wc/demoing-storybook": "^0.3.0",
+    "@open-wc/eslint-config": "^1.0.0",
+    "@open-wc/prettier-config": "^0.1.10",
+    "@open-wc/testing": "^2.5.4",
+    "@open-wc/testing-karma": "^3.0.0",
+    "@open-wc/testing-karma-bs": "^1.0.0",
+    "@storybook/react": "^5.1.11",
+    "@types/form-data": "^2.5.0",
+    "@types/storybook__react": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "concurrently": "^4.1.2",
+    "es-dev-server": "^1.5.0",
+    "eslint": "^6.1.0",
+    "gulp": "^4.0.2",
+    "husky": "^1.0.0",
+    "karma-coverage": "^2.0.1",
+    "lint-staged": "^8.0.0",
+    "polymer-cli": "^1.9.11",
+    "typescript": "^3.7.5",
+    "webpack-merge": "^4.1.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ]
+  },
+  "prettier": "@open-wc/prettier-config",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
