Fixes linting issues

--- a/packages/mobile-top-nav/.eslintrc
+++ b/packages/mobile-top-nav/.eslintrc
@@ -1,3 +1,16 @@
 {
-  "extends": ["plugin:lit/recommended", "../../.eslintrc.json"]
+  "extends": ["../../.eslintrc.json"],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js"]
+      }
+    }
+  },
+  "overrides": [{
+    "files": ["test/**/*.js"],
+    "rules": {
+      "no-unused-expressions": "off"
+    }
+  }]
 }
