Publishes canary release

--- a/packages/mobile-top-nav/package.json
+++ b/packages/mobile-top-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/mobile-top-nav",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.605+810ea62",
   "description": "Top Nav for Internet Archive that is optimized for the mobile experience",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -65,5 +65,6 @@
       "eslint-config-prettier"
     ]
   },
-  "prettier": "@open-wc/prettier-config"
+  "prettier": "@open-wc/prettier-config",
+  "gitHead": "810ea62d6d8ecc1ad02113ba4d1b33029e6b61bd"
 }
