--- a/packages/radio-player/package.json
+++ b/packages/radio-player/package.json
@@ -65,6 +65,7 @@
     "karma-coverage": "^2.0.1",
     "lint-staged": "^8.0.0",
     "polymer-cli": "^1.9.11",
+    "prettier": "^1.19.1",
     "typescript": "^3.8.3",
     "webpack-merge": "^4.1.5"
   },
