--- a/packages/ia-activity-indicator/package.json
+++ b/packages/ia-activity-indicator/package.json
@@ -1,68 +1,39 @@
 {
-  "name": "@internetarchive/ia-activity-indicator",
+  "name": "ia-activity-indicator",
   "version": "0.0.0",
-  "description": "A customizable activity indicator.",
-  "license": "AGPL-3.0-only",
+  "description": "Webcomponent ia-activity-indicator following open-wc recommendations",
+  "author": "ia-activity-indicator",
+  "license": "MIT",
   "main": "index.js",
   "module": "index.js",
-  "types": "index.d.ts",
-  "files": [
-    "lib/**/*",
-    "!lib/demo",
-    "src/**/*",
-    "index.d.ts",
-    "index.js"
-  ],
   "scripts": {
-    "prepare": "yarn run build",
-    "build": "tsc -p tsconfig.build.json",
-    "start": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --preserve-symlinks\"",
-    "start:compatibility": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --compatibility all --preserve-symlinks\"",
-    "lint:eslint": "eslint --ext .ts . --ignore-path .gitignore",
-    "format:eslint": "eslint --ext .ts . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.ts\" --write --ignore-path .gitignore",
-    "lint": "yarn run lint:eslint && yarn run lint:prettier",
-    "format": "yarn run format:eslint && yarn run format:prettier",
-    "test": "yarn run build && karma start --coverage",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:update-snapshots": "karma start --update-snapshots",
-    "test:prune-snapshots": "karma start --prune-snapshots",
-    "test:compatibility": "karma start --compatibility all --coverage",
-    "test:compatibility:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
-    "test:bs": "karma start karma.bs.config.js --compatibility all --coverage",
-    "site:build": "yarn run storybook:build",
-    "storybook": "start-storybook -p 9001",
-    "storybook:build": "build-storybook -o _site -s storybook-static"
+    "storybook": "start-storybook --node-resolve --watch --open",
+    "storybook:build": "build-storybook"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.1.2",
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
-    "@open-wc/demoing-storybook": "^0.3.0",
-    "@open-wc/eslint-config": "^1.0.0",
-    "@open-wc/prettier-config": "^0.1.10",
-    "@open-wc/testing": "^2.0.0",
-    "@open-wc/testing-karma": "^3.0.0",
-    "@open-wc/testing-karma-bs": "^1.0.0",
-    "@storybook/react": "^5.1.11",
-    "@types/form-data": "^2.5.0",
-    "@types/storybook__react": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "concurrently": "^4.1.2",
-    "es-dev-server": "^1.5.0",
+    "es-dev-server": "^1.23.0",
     "eslint": "^6.1.0",
-    "gulp": "^4.0.2",
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/prettier-config": "^0.1.10",
     "husky": "^1.0.0",
-    "karma-coverage": "^2.0.1",
     "lint-staged": "^8.0.0",
-    "polymer-cli": "^1.9.11",
-    "prettier": "^1.19.1",
-    "typescript": "^3.8.3",
-    "typescript-estree": "^18.1.0",
-    "webpack-merge": "^4.1.5"
+    "@open-wc/testing-karma": "^3.0.0",
+    "deepmerge": "^3.2.0",
+    "@open-wc/testing": "^2.0.0",
+    "@open-wc/demoing-storybook": "^1.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -76,11 +47,8 @@
       "pre-commit": "lint-staged"
     }
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "lint-staged": {
-    "*.ts": [
+    "*.js": [
       "eslint --fix",
       "prettier --write",
       "git add"
