Move `import/extensions` to `rules` section

--- a/packages/radio-player/.eslintrc
+++ b/packages/radio-player/.eslintrc
@@ -7,7 +7,9 @@
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
-    },
+    }
+  },
+  "rules": {
     "import/extensions": [
       "error",
       "ignorePackages",
