Radio Archive Full Text Search (#416)
Integrate the Radio Player search with the Radio Archive Full Text Search service. 

This abstracts the search layer of the Radio Player to accept any backend so we can now swap in other backends that conform to the `SearchBackendInterface`, ie the `LocalSearchBackend` or the `FullTextSearchBackend`.

--- a/packages/radio-player/.eslintrc
+++ b/packages/radio-player/.eslintrc
@@ -8,5 +8,15 @@
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
+  },
+  "rules": {
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "js": "never"
+      }
+    ]
   }
 }
