Disable arrow-parens and object-curly-newlines for esline to match prettier

--- a/packages/ia-search-service/.eslintrc
+++ b/packages/ia-search-service/.eslintrc
@@ -10,6 +10,8 @@
     }
   },
   "rules": {
+    "arrow-parens": "off",
+    "object-curly-newline": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
